cmake_minimum_required(VERSION 3.29)
project(Contenedores_dinamicos_Beatriz_Garrido)

set(CMAKE_CXX_STANDARD 14)

add_executable(Contenedores_dinamicos_Beatriz_Garrido
    main.cpp
        ejercicio1/Ejercicio1.cpp
        ejercicio1/Ejercicio1.h
        ejercicio2/Ejercicio2.cpp
        ejercicio2/Ejercicio2.h
        ejercicio3/Ejercicio3.cpp
        ejercicio3/Ejercicio3.h
        ejercicio4/Ejercicio4.cpp
        ejercicio4/Ejercicio4.h
        ejercicio5/Ejercicio5.cpp
        ejercicio5/Ejercicio5.h)
